# sc-app2

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .prettierignore  CLAUDE.md  architecture.md  config.json  eslint.config.js  instructions.md  package.json  postcss.config.cjs  raspberry-pi.md  recovery.md  scope.md  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
examples/: README.md
examples/app/default-plugin/: entry.html
examples/bad-bindings/: index.html  metadata.json
examples/bad-metadata/: index.html  metadata.json
examples/bindings/conditional-plugin/: metadata.json
examples/bindings/forward-ref-plugin/: metadata.json
examples/bindings/group-bind-plugin/: index.html  metadata.json
examples/bindings/nested-groups-plugin/: metadata.json
examples/bindings/var-plugin/: metadata.json
examples/conditional-plugin/: index.html
examples/default-plugin/: metadata.json
examples/forward-ref-plugin/: index.html
examples/group-plugin/: index.html
examples/inputs/select-plugin/: metadata.json
examples/inputs/waveselect-plugin/: metadata.json
examples/invalid/bad-asset-mismatch/: index.html  metadata.json
examples/invalid/bad-asset-type/: index.html  metadata.json
examples/invalid/bad-circular-bind/: index.html  metadata.json
examples/invalid/bad-entry-schema/: index.html  metadata.json
examples/invalid/bad-entry-xhtml/: index.html  metadata.json
examples/invalid/bad-forward-ref/: index.html  metadata.json
examples/invalid/bad-forward-state-ref/: index.html  metadata.json
examples/invalid/bad-node-bind/: index.html  metadata.json
examples/invalid/bad-run-bind/: index.html  metadata.json
examples/invalid/bad-synth-target/: index.html  metadata.json
examples/invalid/bad-synthdef-bind/: index.html  metadata.json
examples/invalid/bad-ugen-input/: index.html  metadata.json
examples/invalid/bad-ugen-ref/: index.html  metadata.json
examples/invalid/bad-undeclared-control/: index.html  metadata.json
examples/invalid/bad-unknown-synthdef/: index.html  metadata.json
examples/nested-groups-plugin/: index.html
examples/select-plugin/: index.html
examples/synth-plugin/: entry.html  metadata.json
examples/synthdef-plugin/: index.html  metadata.json
examples/synths/example-plugin/: index.html  metadata.json
examples/synths/group-plugin/: metadata.json
examples/var-plugin/: index.html
examples/waveselect-plugin/: index.html
examples/widgets/scope-frames-plugin/: index.html  (+1 more)
perf-results/: rpi-arm64-2026-06-18T12-20-16-418Z.json  scope-pi-direct.json  scope-pi-vite.json
scripts/: package-plugins.sh  sc-startup.scd  setup-deps.sh  start-osc.sh  start-strudeldirt.sh  validate-examples.mjs
scripts/perf/: README.md  report.mjs  run.mjs  scope-bench.mts
scripts/rpi/: scsynth.service  startup.scd  strudeldirt-attach.scd  strudeldirt.service
src/: App.css  App.tsx  css.d.ts  env.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: asset_resolver.rs  bridge.rs  cli.rs  config.rs  gui.rs  layouts.rs  lib.rs  logger.rs  main.rs  osc.rs  peer.rs  saved_sessions.rs  server.rs  session.rs
src-tauri/src/cli/: config.rs  gui.rs  mod.rs  plugin.rs  serve.rs
src-tauri/src/config/: cli.rs  mod.rs
src-tauri/src/core/: blocks.rs  bridge.rs  config.rs  ids.rs  layouts.rs  mod.rs  osc.rs  peer.rs  scsynth.rs  server.rs  sessions.rs
src-tauri/src/core/plugin/: manager.rs  mod.rs
src-tauri/src/core/plugin/xsd/: sc-plugin-schema.xsd
src-tauri/src/core/router/: assets.rs  diag.rs  mod.rs  plugin.rs  session.rs  ws.rs
src-tauri/src/core/scope/: layout.rs  mmap.rs  mod.rs  reader.rs  session.rs  wire.rs
src-tauri/src/plugin/: cli.rs  manager.rs  mod.rs
src-tauri/src/plugin/xsd/: sc-plugin-schema.xsd
src-tauri/src/router/: assets.rs  config.rs  diag.rs  mod.rs  plugin.rs  session.rs  ws.rs
src-tauri/src/scope/: mmap.rs  mod.rs  shm.rs
src/components/: ConnectionOverlay.test.tsx  ConnectionOverlay.tsx  Dashboard.tsx  DashboardPanel.tsx  Drawer.tsx  Header.tsx  PluginList.tsx  PluginPicker.tsx  ToastStack.tsx
src/constants/: env.ts  layout.ts  osc.ts  sc-elements.ts  session.ts  store.ts
src/http/: index.ts
src/osc/: IdAllocator.ts  OscClient.ts  README.md  WebsocketWorkerPlugin.ts  WorkerClient.ts  WorkerOscClient.ts  bridge.ts  decodeFrame.ts  flatten.ts  listenerGroup.ts  messageEndpoint.ts  oscWorkerMain.ts  protocol.ts  transportWorker.ts  universalWorker.ts  worker.ts  workerBootstrap.ts
src/plugins/: PluginManager.ts
src/runtime/: handlers.ts  registry.ts
src/sc-elements/: README.md  controls.test.ts  examples.test.ts  index.ts  sc-checkbox.ts  sc-console.ts  sc-control.ts  sc-display.ts  sc-group.ts  sc-if.ts  sc-option.ts  sc-plugin.ts  sc-radio-group.ts  sc-radio.ts  sc-range.ts  sc-run.ts  sc-scope.ts  sc-select.ts  sc-strudel.ts  sc-synth.ts  sc-synthdef.ts  sc-ugen.ts  sc-var.ts
src/scope/: ScopeController.ts  testToneSynthDef.ts
src/session/: IdAllocator.ts  SessionManager.ts  bootstrap.ts  bootstrapTypes.ts
src/state/: SessionContext.tsx  SessionController.ts  layout.ts  plugins.ts  session.ts  store.ts  useStore.ts
src/stores/: controls.ts  layout.ts  osc.ts  plugins.ts  runtime.ts  session.ts  store.ts  useStore.ts
src/strudel/: OscConsole.tsx  StrudelConsole.tsx  dirt.ts  osc.ts  prebake.ts  session.ts
src/synthdefs/: scopeTapSynthDef.ts
src/types/: api.d.ts  osc.d.ts  parsers.d.ts  protocol.d.ts  runtime.d.ts  sc-elements.d.ts  stores.d.ts
src/ui/: ScopeView.tsx  StrudelConsole.tsx
src/util/: debugLog.ts  reactiveStore.ts
src/utils/: debugLog.ts
src/worker/: messageEndpoint.ts  transport.ts  transportWorker.ts  worker.ts
test/: client.test.ts
test/clients/: InProcessOscClient.ts  NodeWorkerOscClient.ts  fromEventEmitter.ts  nodeWorkerClient.ts  nodeWorkerEntry.ts
test/fixtures/: mockBridge.ts
test/scenarios/: lib.ts  realbridge.ts  scope-tone.ts
tests/: compile-synthdef.test.ts  controls.test.ts  examples.test.ts  osc-client.test.ts  session-manager.test.ts  widgets.test.ts
(+83 files in other folders)
