[package]
name = "sc-app2"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sc_app2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Resolve the app data dir (for config.json) without a Tauri AppHandle,
# so headless `serve` and GUI mode read the same path.
dirs = "6"

# CLI + HTTP server shared by `serve` (headless) and GUI mode.
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
# `ws` adds the WebSocket extractor for the OSC bridge (/ws).
axum = { version = "0.8", features = ["ws"] }
# Content-type guessing for served frontend assets.
mime_guess = "2"
# Session ids minted by /api/session and validated on the WS upgrade.
uuid = { version = "1", features = ["v4", "serde"] }

# Structured logging: stderr always, optional daily-rotated JSON file.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
# Compile/validate route patterns at boot, and route OSC by address.
regex = "1"
# Encode the /notify handshake and decode OSC packets for the console log.
rosc = "0.11"
# Ergonomic error propagation for peer connection.
anyhow = "1"

