[package]
name = "sc-app2"
version = "0.1.0"
description = "Desktop/browser controller for SuperCollider (scsynth) and Strudel over a Rust OSC bridge"
authors = ["Nicola Melloni (https://github.com/nicmell)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sc_app2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Resolve the app data dir (for config.json) without a Tauri AppHandle,
# so headless `serve` and GUI mode read the same path.
dirs = "6"

# CLI + HTTP server shared by `serve` (headless) and GUI mode.
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal"] }
# `ws` adds the WebSocket extractor for the OSC bridge (/ws).
axum = { version = "0.8", features = ["ws"] }
# CORS for the loopback API: the GUI webview is always cross-origin to the
# embedded server (tauri://localhost in prod, the Vite devUrl in dev).
tower-http = { version = "0.6", features = ["cors"] }
# Content-type guessing for served frontend assets.
mime_guess = "2"
# Cheap-clone byte buffers fanned out to WS clients (re-exported by axum too).
bytes = "1"
# Session ids minted by /api/session and validated on the WS upgrade.
uuid = { version = "1", features = ["v4", "serde"] }

# Structured logging: stderr always, optional daily-rotated JSON file.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
# Compile/validate route patterns at boot, and route OSC by address.
regex = "1"
# Encode the /notify handshake and decode OSC packets for the console log.
rosc = "0.11"
# Ergonomic error propagation for peer connection.
anyhow = "1"
# mmap scsynth's shared-memory scope buffers (SHM scope reader).
libc = "0.2"

# Plugin system: zip bundles, XSD validation of entry XHTML, asset sniffing.
zip = { version = "2", default-features = false, features = ["deflate"] }
# Pinned: 0.8.1+ rejects mixed-content models with minOccurs=0 choices
# (text-only <span>… fails "requires one of …, found: none"); 0.8.0 is the
# version the old sc-app validated the example plugins with.
fastxml = "=0.8.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

